fix: adjust image upload spacing

--- a/src/routes/rehomePage/RehomePage.css
+++ b/src/routes/rehomePage/RehomePage.css
@@ -55,7 +55,7 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 170px;
+  gap: 200px;
   margin-bottom: 30px;
   width: 100%;
 }
